--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">UIAndroid.com examples</string>
+    <string name="app_name">UIAndroid</string>
 
     <string name="wrong_device_version">Min sdk %d is required to run this example</string>
 </resources>
