--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_label">UIAndroid.com examples</string>
 
     <string name="reveal_effect_label">Reveal effect</string>
+    <string name="slide_in_on_start_label">Slide in on app start</string>
 
     <string name="wrong_device_version">Min sdk %d is required to run this example</string>
 </resources>
